# geoarrowrs

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  README.qmd  REAMDE.md  configure
R/: extendr-wrappers.R  io.R
dev/: contains-prompt.md  dev.R  geoarrow-stream-bug.R  test-readers.R
inst/extdata/: nc.parquet  osm-edinburgh-central.fgb  osm-edinburgh-central.parquet  tst.geoparquet
inst/extdata/shp/: osm-edinburgh-central.shp  osm-edinburgh-central.shx
src/: Makevars.in  Makevars.win.in  entrypoint.c  geoarrowrs-win.def  naro-win.def
src/rust/: Cargo.toml
src/rust/src/: contiguity.rs  io.rs  length.rs  lib.rs
src/rust/src/algorithm/: affine_ops.rs  area.rs  bounding_rect.rs  center.rs  centroid.rs  chaikin_smoothing.rs  concave_hull.rs  contains.rs  convex_hull.rs  densify.rs  euclidean_distance.rs  frechet_distance.rs  has_dimensions.rs  interior_point.rs  length.rs  line_interpolate_point.rs  line_locate_point.rs  minimum_rotated_rect.rs  mod.rs  remove_repeated_points.rs  rotate.rs  scale.rs  simplify.rs  skew.rs  translate.rs
src/rust/src/algorithm/native/: mod.rs  type_ids.rs
src/rust/src/ffi/: boolean.rs  generic.rs  mod.rs  point.rs  primitives.rs
src/rust/src/table/: mod.rs
