[package]
name = 'geoarrowrs'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'geoarrowrs'

[dependencies]
extendr-api = "0.7.1"
# extendr-api = { git = "https://github.com/extendr/extendr" }
arrow = { version = "53.3.0", features = ["ffi"], default-features = false}
geoarrow = { version = "0.4.0-beta.3", features = ["flatgeobuf"] }
libR-sys = "*"

# [profile.release]
# codegen-units = 1
# lto = true