[package]
name = 'geoarrowrs'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'geoarrowrs'

[dependencies]
extendr-api = "0.7.1"
# extendr-api = { git = "https://github.com/extendr/extendr", branch = "unsafe_externalptr" }
arrow = { version = "53.3.0", features = ["ffi"], default-features = false}
parquet = { version = "53.3.0", default-features = true }
geoarrow = { version = "0.4.0-beta.3", features = ["flatgeobuf", "parquet"] }
geo = "*"
libR-sys = "*"
geo-types = "*"
geo-index = { version = "0.1"}

# [profile.release]
# codegen-units = 1

# lto = true